added css style

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="mt-5">
             <div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center w-50">
                                 <div>
@@ -53,7 +53,7 @@
                                     <p>This is the best headphone in the world for people who just want to waste time in
                                         front of funky world.</p>
                                     <h1>$420</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <div class="btn panda-btn-warning">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-log-5 w-50">
@@ -61,7 +61,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center w-50">
                                 <div>
@@ -71,7 +71,7 @@
                                         in front of funky world.
                                     </p>
                                     <h1>$1200</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <div class="btn panda-btn-warning">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-log-5 w-50">
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded panda-bg-info p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center w-50">
                                 <div>
@@ -89,7 +89,7 @@
                                         in front of funky world.
                                     </p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-warning">Buy Now</div>
+                                    <div class="btn panda-btn-warning">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-log-5 w-50">
@@ -116,7 +116,7 @@
         <!-- categories start -->
         <section>
             <div class="container text-center my-5">
-                <div class="row g-2">
+                <div class="row g-4 categories">
                     <!-- single categorie -->
                     <div class=" col-lg-4 col-md-6 col-sm-12">
                         <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-around">
@@ -155,7 +155,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-warning">Buy Now</div>
+                            <div class="btn panda-btn-warning">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
         <!-- backpack section end -->
         <!-- subscribe start -->
         <sectiion style="height: 300px;"
-            class="container rounded-3 d-flex justify-content-center align-items-center bg-info" id="subscribe">
+            class="container rounded-3 d-flex justify-content-center align-items-center panda-bg-info" id="subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
@@ -249,7 +249,7 @@
                     <div class="mb-1">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn btn-warning">Submit</button>
+                    <button type="submit" class="btn panda-btn-warning">Submit</button>
                 </form>
             </div>
         </sectiion>
